tests/ui/impl-trait/in-trait/refine-resolution-errors.stderr
error[E0207]: the type parameter `T` is not constrained by the impl trait, self type, or predicates
  --> $DIR/refine-resolution-errors.rs:9:6
   |
LL | impl<T: ?Sized> Mirror for () {
   |      ^ unconstrained type parameter

warning: impl trait in impl method signature does not match trait method signature
  --> $DIR/refine-resolution-errors.rs:19:5
   |
LL |     async fn first() -> <() as Mirror>::Assoc;
   |     ------------------------------------------ return type from trait method defined here
...
LL |     async fn first() {}
   |     ^^^^^^^^^^^^^^^^ this bound is stronger than that defined on the trait
   |
   = note: add `#[allow(refining_impl_trait)]` if it is intended for this to be part of the public API of this crate
   = note: we are soliciting feedback, see issue #121718 <https://github.com/rust-lang/rust/issues/121718> for more information
   = note: `#[warn(refining_impl_trait_reachable)]` on by default
help: replace the return type so that it matches the trait
   |
LL |     <() as Mirror>::Assoc {}
   |     ~~~~~~~~~~~~~~~~~~~~~

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0207`.
